--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,8 @@ baseurl: "/canonize"
 
 permalink: /:title/
 
+show_dir_listing: false
+
 # The release of Jekyll Now that you're using
 version: v1.2.0
 
@@ -99,4 +101,10 @@ exclude:
   - LICENSE
   - README.md
   - CNAME
-
+  - scratch/
+  - input/
+  - templates/
+  - README.md
+  - "*.py"
+  - venv/
+  - requirements.txt
