--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,14 @@ name: hussein's canon
 # Name of the author
 author: Hussein Elgridly
 
+# description, displayed in SEO links
+description: from hussein's canon
+
 # Short bio or description (displayed in the header)
-description: what am i on about?
+strapline: what am i on about?
+
+# note: jekyll-seo-tags should support `tagline` here, but it only does if you point your Gemfile to master,
+# which GitHub Pages doesn't. so we're bodging in similar behaviour
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/hussein_400x400.jpg
@@ -35,6 +41,9 @@ footer-links:
   googleplus: # anything in your profile username that comes after plus.google.com/
   playconsole:
 
+# for jekyll-seo-tag twitter cards
+author:
+  twitter: selflathing
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
