--- a/.github/workflows/regen-contents.yml
+++ b/.github/workflows/regen-contents.yml
@@ -36,7 +36,7 @@ jobs:
         git diff --quiet && git diff --staged --quiet || git commit -m "Auto-update contents.json"
         
     - name: Push changes
-      uses: ad-m/github-push-action@main
+      uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: ${{ github.ref }}
